feat: layout phase 1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,20 @@ main {
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes blink {
+  0%,
+  100% {
+    background-color: theme(
+      "colors.destructive.DEFAULT"
+    ); /* `destructive` 顏色 */
+  }
+  30% {
+    background-color: theme("colors.primary.DEFAULT"); /* `secondary` 顏色 */
+    /* color: black; */
+  }
+}
+
+.animate-blink {
+  animation: blink 1.5s infinite;
+}
